# Inference-System-without-TensorFlow-api

./: CMakeLists.txt  Makefile  README.md  main.cpp  start.sh
DataType/: MultiData.h  datatype.h
LoadBatch/: loaddata.h
TreeNode/: Node.h  TopoCompute.cpp  TopoCompute.h  activator.h  tensor_math_lib.cpp  tensor_math_lib.h
common/: common.h  commonlib.h
jsonfile/: Fully_Connect_Model.json  data.json  data1.json  data10.json  data11.json  data15.json  data2 2.json  data3.json  data4.json  data5.json  data6.json  data7.json  data8.json  data9.json  model1.json  test.json
oplib/: tensor_math_lib.cpp  tensor_math_lib.h
script/: Split_Tensorflow.ipynb  TensorModel1.ipynb  TensorModel2.ipynb  TensorModel3.ipynb  TensorModel4.ipynb  TensorOp 2.ipynb  mnist_data.py
script/.ipynb_checkpoints/: Split_Tensorflow-checkpoint 2.ipynb  TensorModel1-checkpoint.ipynb  TensorModel2-checkpoint.ipynb  TensorModel3-checkpoint.ipynb  TensorOp-checkpoint.ipynb
